[tool.poetry]
name = "api using graphql"
version = "0.1.0"
description = ""
authors = ["Charchit <charchitregmi10@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ariadne = "^0.20.1"
starlette = "^0.31.1"
uvicorn = "^0.23.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
